--- a/app/src/main/res/layout/activity_edaped_a.xml
+++ b/app/src/main/res/layout/activity_edaped_a.xml
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.05" />
 
     <TextView
-        android:id="@+id/text_context_g36"
+        android:id="@+id/text_context_htp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
