--- a/app/src/main/res/layout/fragment_personality.xml
+++ b/app/src/main/res/layout/fragment_personality.xml
@@ -7,13 +7,13 @@
     tools:context=".options.ui.personality.PersonalityFragment">
 
     <Button
-        android:id="@+id/btn_cpm"
+        android:id="@+id/btn_PFister"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="@color/dark_grey"
-        android:text="CPM"
+        android:text="PFISTER"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -26,13 +26,13 @@
 
 
     <Button
-        android:id="@+id/btn_r1"
+        android:id="@+id/btn_palografico"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="@color/dark_grey"
-        android:text="R1"
+        android:text="PALOGRAFICO"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -44,13 +44,13 @@
         app:layout_constraintVertical_bias="0.474" />
 
     <Button
-        android:id="@+id/btn_wisc"
+        android:id="@+id/btn_quati"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="@color/dark_grey"
-        android:text="WISC"
+        android:text="quati"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -62,61 +62,61 @@
         app:layout_constraintVertical_bias="0.713" />
 
     <TextView
-        android:id="@+id/text_idade_r1"
+        android:id="@+id/text_idade_palografico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IDADE:  A partir de 18 anos"
+        android:text="IDADE:  18 a 60 anos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.039"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.557" />
+        app:layout_constraintVertical_bias="0.549" />
 
     <TextView
-        android:id="@+id/text_qtd_r1"
+        android:id="@+id/text_qtd_palografico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QUANTIDADE: 2"
+        android:text="QUANTIDADE: 7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.032"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.612" />
+        app:layout_constraintVertical_bias="0.602" />
 
     <TextView
-        android:id="@+id/text_name_r1"
+        android:id="@+id/text_name_palografico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NOME: R-1 Teste não-verbal de inteligência "
+        android:text="NOME: O Teste Palográfico na Avaliação da Personalidade "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.083"
+        app:layout_constraintHorizontal_bias="0.318"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.532" />
+        app:layout_constraintVertical_bias="0.522" />
 
     <TextView
-        android:id="@+id/text_valid_r1"
+        android:id="@+id/text_valid_palografico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="VALIDADE: 11/04/2023"
+        android:text="VALIDADE: 03/09/2024"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintHorizontal_bias="0.053"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_g36"
-        app:layout_constraintVertical_bias="0.584" />
+        app:layout_constraintTop_toTopOf="@+id/btn_htp"
+        app:layout_constraintVertical_bias="0.575" />
 
     <Button
-        android:id="@+id/btn_g36"
+        android:id="@+id/btn_htp"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="@color/dark_grey"
-        android:text="G36"
+        android:text="HTP"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -128,110 +128,109 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/text_name_cpm"
+        android:id="@+id/text_name_PFister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="NOME: Matrizes Progressivas Coloridas de Raven "
+        android:text="NOME: As Pirâmides Coloridas de Pfister"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintHorizontal_bias="0.073"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_cpm"
+        app:layout_constraintTop_toBottomOf="@+id/btn_PFister"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/text_idade_cpm"
+        android:id="@+id/text_idade_PFister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="IDADE: De 5 anos a 11 anos e 6 meses"
+        android:text="IDADE: 18 a 66 anos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.033"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_name_cpm"
+        app:layout_constraintTop_toBottomOf="@+id/text_name_PFister"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/text_valid_cpm"
+        android:id="@+id/text_valid_PFister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="VALIDADE: 19/05/2038"
+        android:text="VALIDADE: 22/01/2025"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_idade_cpm"
-        app:layout_constraintVertical_bias="0.004" />
+        app:layout_constraintTop_toBottomOf="@+id/text_idade_PFister"
+        app:layout_constraintVertical_bias="0.006" />
 
     <TextView
-        android:id="@+id/text_qtd_cpm"
+        android:id="@+id/text_qtd_PFister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:text="QUANTIDADE: 5"
+        android:text="QUANTIDADE: 15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.029"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_valid_cpm"
+        app:layout_constraintTop_toBottomOf="@+id/text_valid_PFister"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/text_name_g36"
+        android:id="@+id/text_name_htp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NOME: G-36 Teste não-verbal de inteligência"
+        android:text="NOME: Casa - Árvore- Pessoa - Técnica Projetiva de Desenho"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.067" />
 
     <TextView
-        android:id="@+id/text_idade_g36"
+        android:id="@+id/text_idade_htp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IDADE:  A partir de 17 anos"
+        android:text="IDADE:  A partir de 8 anos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.094" />
+        app:layout_constraintVertical_bias="0.122" />
 
     <TextView
-        android:id="@+id/text_valid_g36"
+        android:id="@+id/text_valid_htp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="VALIDADE: 27/09/2023"
+        android:text="VALIDADE: 16/01/2024"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119" />
+        app:layout_constraintVertical_bias="0.148" />
 
     <TextView
-        android:id="@+id/text_qtd_g36"
+        android:id="@+id/text_qtd_htp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QUANTIDADE: 11"
+        android:text="QUANTIDADE: 15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintHorizontal_bias="0.052"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.146" />
+        app:layout_constraintVertical_bias="0.176" />
 
     <TextView
-        android:id="@+id/text_name_wisc"
+        android:id="@+id/text_name_quati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QUANTIDADE: 8"
+        android:text="QUANTIDADE: 28"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
@@ -240,36 +239,36 @@
         app:layout_constraintVertical_bias="0.835" />
 
     <TextView
-        android:id="@+id/text_idade_wisc"
+        android:id="@+id/text_idade_quati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IDADE:  06 anos e zero meses e 16 anos e 11 meses."
+        android:text="IDADE:  18 a 34 anos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.778" />
 
     <TextView
-        android:id="@+id/text_valid_wisc"
+        android:id="@+id/text_valid_quati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="136dp"
-        android:text="VALIDADE: 03/12/2031"
+        android:text="VALIDADE: 25/10/2023"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/text_qtd_wisc"
+        android:id="@+id/text_qtd_quati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NOME:  Escala Wechsler de Inteligência para Crianças "
+        android:text="NOME:  Questionário de Avaliação Tipológica "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.751" />
